--- a/css/animation.css
+++ b/css/animation.css
@@ -1,3 +1,8 @@
+.blockScroll {
+  height: 100%;
+  overflow-y: hidden;
+}
+
 .activeBtnTop {
   -webkit-transform-origin: 0% 50%;
           transform-origin: 0% 50%;
@@ -20,15 +25,8 @@ nav .navListActive {
   left: 0;
 }
 
-nav .Spyscroll {
-  -webkit-text-decoration-color: #b91616;
-          text-decoration-color: #b91616;
-  -webkit-text-decoration-line: underline;
-          text-decoration-line: underline;
-}
-
-nav .Spyscroll a {
-  color: #999999;
+.Spyscroll .activeMenu {
+  opacity: 1;
 }
 
 @-webkit-keyframes bounceArrow {
