--- a/css/main.css
+++ b/css/main.css
@@ -112,6 +112,7 @@ nav .lineMid {
 }
 
 nav .navList {
+  display: none;
   position: relative;
   top: 0;
   left: 100%;
@@ -120,8 +121,6 @@ nav .navList {
   padding-top: 50px;
   background-color: #363535;
   z-index: 1;
-  -webkit-transition: 1s;
-  transition: 1s;
 }
 
 nav ul {
