--- a/css/main.css
+++ b/css/main.css
@@ -109,8 +109,7 @@ nav .lineMid {
 nav .navList {
   display: none;
   position: relative;
-  top: 0;
-  left: 100%;
+  top: -110vh;
   width: 100%;
   height: 110vh;
   padding-top: 50px;
